--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Every day is a different story. Here's mine..</h1>
+<div class="page-header">
+  <h1>Every day is a different story. Here's mine..</h1>
+</div>
 <div class="list">
 <table width="1000">
   <thead>
