--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -3,31 +3,15 @@
   <h1>Every day is a different story. Here's mine..</h1>
 </div>
 <div class="list">
-<table width="1000">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Subject</th>
-      <th>Note</th>
-      <th>Comment</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% @stories.each do |story| %>
+    <h2><%= story.subject %></h2>
+    <p class="pull-right"><small>Date: <%= story.date %></small></p>
+    <p><%= story.note %></p>
+    <p>Side note: <%= story.comment %></p>
+    <p class="pull-right"><%= link_to 'Show ', story %><%= link_to 'Edit ', edit_story_path(story) %><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+    <hr>    
+<% end %>
 
-  <tbody>
-    <% @stories.each do |story| %>
-      <tr>
-        <td><%= story.date %></td>
-        <td><%= story.subject %></td>
-        <td><%= story.note %></td>
-        <td><%= story.comment %></td>
-        <td><%= link_to 'Show', story %></td>
-        <td><%= link_to 'Edit', edit_story_path(story) %></td>
-        <td><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 </div>
 
 <br>
