--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,13 @@
   </div>
 <% end %>
 <div class="container">
-  <div class="jumpbotron">
+  <% if user_signed_in? %>
+    <li>Signed in in as <%= current_user.email %></li>
+    <li><%= link_to "Sign Out", sign_out_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to "Sign In", sign_in_path %></li>
+  <% end %>
+  <div class="jumpbotron" border='1'>
       <p><%= link_to "Home", stories_path %><img class="glyphicon glyphicon-home"></p>
   </div>
   <div class="time pull-right">
