--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -3,13 +3,16 @@
   <h1>Every day is a different story. Here's mine..</h1>
 </div>
 <div class="list">
+
 <% @stories.each do |story| %>
-    <h2><%= story.subject %></h2>
-    <p class="pull-right"><small>Date: <%= story.date %></small></p>
-    <p><%= story.note %></p>
-    <p>Side note: <%= story.comment %></p>
-    <p class="pull-right"><%= link_to 'Show ', story %><%= link_to 'Edit ', edit_story_path(story) %><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-    <hr>    
+  <h2><%= story.subject %></h2>
+  <p class="pull-right"><small>Date: <%= story.date %></small></p>
+  <p><%= story.note %></p>
+  <p>Side note: <%= story.comment %></p>
+  <% if user_signed_in? %>
+  <p class="pull-right"><%= link_to 'Show ', story %><%= link_to 'Edit ', edit_story_path(story) %><%= link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+  <% end %>
+  <hr>    
 <% end %>
 
 </div>
