--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,19 +17,20 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-<% flash.each do |type, message| %>
-  <div class="<%= type %>">
-    <p><%= message %></p>
-  </div>
-<% end %>
+
 <div class="container">
+  <% flash.each do |type, message| %>
+    <div class="<%= type %>">
+      <!-- <p><%= message %></p> -->
+    </div>
+  <% end %>
   <% if user_signed_in? %>
     <li>Signed in in as <%= current_user.email %></li>
     <li><%= link_to "Sign Out", sign_out_path, method: :delete %></li>
   <% else %>
     <li><%= link_to "Sign In", sign_in_path %></li>
   <% end %>
-  <div class="jumpbotron" border='1'>
+  <div class="jumpbotron" style="color:orange">
       <p><%= link_to "Home", stories_path %><img class="glyphicon glyphicon-home"></p>
   </div>
   <div class="time pull-right">
