--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-<div class="page-header">
+<div class="page-header" style="color:orange">
   <h1>Every day is a different story. Here's mine..</h1>
 </div>
 <div class="list">
@@ -20,3 +20,4 @@
 <br>
 
 <%= link_to 'New Story', new_story_path %>
+
