--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <body>
 
 <div class="container">
+  <h1>WELCOME</h1>
   <% flash.each do |type, message| %>
     <div class="<%= type %>">
       <!-- <p><%= message %></p> -->
