--- a/app/views/stories/show.html.slim
+++ b/app/views/stories/show.html.slim
@@ -2,22 +2,22 @@
 p#notice = notice 
 
 p
-  <strong>Date:</strong>
+  strong Date:
   = @story.date
 
 
 p
-  <strong>Subject:</strong>
+  strong Subject
   = @story.subject
 
 
 p
-  <strong>Note:</strong>
+  strong Note
   = @story.note
 
 
 p
-  <strong>Comment:</strong>
+  strong Comment
   = @story.comment
 
 
