--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -10,7 +10,10 @@ p#notice = notice
   p = story.note 
   p Side note: = story.comment
   - if user_signed_in?
-  p.pull-right = link_to 'Show ', story = link_to 'Edit ', edit_story_path(story) = link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' }
+  p.pull-right 
+  = link_to 'Show ', story 
+  = link_to 'Edit ', edit_story_path(story) 
+  = link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' }
   
   hr
 
