--- a/app/views/stories/new.html.slim
+++ b/app/views/stories/new.html.slim
@@ -1,5 +1,5 @@
-<h1>New Story</h1>
+h1 New Story 
 
-<%= render 'form' %>
+== render 'form' 
 
-<%= link_to 'Back', stories_path %>
+= link_to 'Back', stories_path
