--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,10 +14,10 @@ html lang="en"
     .container
     h3 WELCOME
     - if user_signed_in?
-      p Signed in in as = current_user.email
-      = link_to "Sign Out", sign_out_path, method: :delete 
+        p Signed in in as = current_user.email
+        = link_to "Sign Out", sign_out_path, method: :delete 
     - else
-      = link_to "Sign In", sign_in_path
+        = link_to "Sign In", sign_in_path
 
     .jumpbotron style="color:orange"
       = link_to "Home", stories_path
@@ -26,4 +26,13 @@ html lang="en"
       = current_date_and_time
 
       = yield
+
+    .button1 
+      button type="button" Button #1
+
+    .button2 
+      button type="button" Button #2
+
+    .button3 
+      button type="button" Button #3
 
