--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -1,14 +1,15 @@
 p#notice = notice
-.page-header style="color:orange
+.page-header style="color:orange"
   h1 Every day is a different story. Here's mine..
 
-.list
 
+
+.list
 - @stories.each do |story|
-    h2 = story.subject
-    p.pull-right Date: = story.date 
-    p = story.note 
-    p Side note: = story.comment
+  h2 = story.subject
+  p.pull-right Date: = story.date 
+  p = story.note 
+  p Side note: = story.comment
   - if user_signed_in?
     p.pull-right 
     = link_to 'Show ', story 
