--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -2,9 +2,8 @@ p#notice = notice
 .page-header style="color:orange"
   h1 Every day is a different story. Here's mine..
 
-- form_tag stories_path, :method => 'get' do 
-  p
-    = text_field_tag :search, params[:search] 
+- form_tag :controller => 'stories', :action => 'search', :method => 'get' do 
+    = text_field_tag :search, params[:search], :id => 'search_field'
     = submit_tag "Search", :name => nil
 
 .list
