search works, comments get displayed due to missing = to output results

--- a/app/views/stories/_form.html.slim
+++ b/app/views/stories/_form.html.slim
@@ -6,12 +6,12 @@
         = f.input :date
 
       .field
-          = f.label :subject 
+          = f.label :subject
           = f.input :subject 
       
       .field
         = f.label :note 
-        = f.input :note 
+        = f.input :note, placeholder: "Write something here"
 
       .field
         = f.label :comment 
