--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -1,17 +1,19 @@
+= form_tag stories_path, :action => 'search', :method => 'get' do 
+  = text_field_tag :search, params[:search], :id => 'search_field'
+  = submit_tag "Search", :name => nil
+
 p#notice = notice
 .page-header style="color:orange"
   h1 Every day is a different story. Here's mine..
-
-- form_tag :controller => 'stories', :action => 'search', :method => 'get' do 
-    = text_field_tag :search, params[:search], :id => 'search_field'
-    = submit_tag "Search", :name => nil
-
+  
 .list
 - @stories.each do |story|
   h2 = story.subject
   p.pull-right Date: = story.date 
   p = story.note 
-  p Side note: = story.comment
+  p 
+    ' Side note: 
+    = story.comment
   - if user_signed_in?
     .pull-right 
     = link_to 'Show ', story 
