--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@author) do |f| %>
+<%= simple_form_for(@author), :url { :action => :create, :id => @story.id} =>  do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
