--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,9 @@ html lang="en"
     .container
       h3 WELCOME
       - if user_signed_in?
-        p Signed in in as = current_user.email
+        p 
+          'Signed in as 
+          = current_user.email
         = link_to "Sign Out", sign_out_path, method: :delete 
       - else
           = link_to "Sign In", sign_in_path
@@ -26,7 +28,7 @@ html lang="en"
         = current_date_and_time
 
       = yield
-
+      
       .button1 
         button type="button" Button #1
 
