--- a/app/views/stories/index.html.slim
+++ b/app/views/stories/index.html.slim
@@ -6,23 +6,23 @@ p#notice = notice
 .page-header style="color:orange"
   h1 Every day is a different story. Here's mine..
 
-.list
-- @stories.each do |story|
-  h2 = story.subject
-  p
-  .pull-right 
-    p 
-      ' Date:
-    = story.date 
-  p = story.note 
-  p 
-    ' Side note: 
-    = story.comment
-  - if user_signed_in?
+#stories.list
+  - @stories.each do |story|
+    h2 = story.subject
+    p
     .pull-right 
-      = link_to 'Show ', story 
-      = link_to 'Edit ', edit_story_path(story) 
-      = link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' }
+      p 
+        ' Date:
+      = story.date 
+    p = story.note 
+    p 
+      ' Side note: 
+      = story.comment
+    - if user_signed_in?
+      .pull-right 
+        = link_to 'Show ', story 
+        = link_to 'Edit ', edit_story_path(story) 
+        = link_to 'Destroy', story, method: :delete, data: { confirm: 'Are you sure?' }
 
 br
 
