added continue link after truncated story

--- a/app/views/stories/_stories.html.slim
+++ b/app/views/stories/_stories.html.slim
@@ -7,6 +7,7 @@
         ' Date:
       = story.date 
     p = story.note.truncate(27, separator:' ')
+      = link_to 'continue', story
     p 
       ' Side note: 
       = story.comment
